samples/bookinfo/platform/kube/productinfo-vs-gw-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: productpage-gateway
  namespace: productpage
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http5
        protocol: HTTP
      hosts:
        - "productpage.sbg.k8s.sbsa.s7s.cloud"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-vs
  namespace: productpage
spec:
  hosts:
    - "productpage.sbg.k8s.sbsa.s7s.cloud"
  gateways:
    - productpage-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: productpage
            port:
              number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
  namespace: productpage
spec:
  host: productpage
  trafficPolicy:
    tls:
      mode: DISABLE
